== 0.7.19 / 2009-09-21
  * Minor Enhancements
    * Teach `god status` to take a task name as a param and return
      an exit code of 0 if all watches are up or a non-zero exit code
      (equal to the number of non-up watches) if they are not.

== 0.7.18 / 2009-09-09
  * Minor Enhancements
    * Better handling of unexpected exceptions in conditions
    * Added support for running processes in a directory other than '/' [github.com/samhendley]
  * Bug Fixes
    * Generate an actual unique identifier for email contact [github.com/underley]

== 0.7.17 / 2009-08-25
  * Bug Fixes
    * Fix the glob and directory config loading for -c option

== 0.7.16 / 2009-08-24
  * Minor Enhancements
    * Better logging for disk_usage condition [github.com/lettherebecode]
  * Bug Fixes
    * Only sleep if driver delay is > 0 [github.com/ps2]
    * Rescue Timeout::Error exception due to smtp server timing out [github.com/ps2]
    * Disk usage condition should use `df -P` to prevent line splitting [github.com/mseppae]
    * Always require YAML so binary works on dumb systems

== 0.7.15 / 2009-08-19
  * Minor Enhancements
    * Support SSL Campfire connections [github.com/eric]
    * Allow wildcards in -c configuration file option

== 0.7.14 / 2009-08-10
  * Minor Enhancements
    * Only store log lines when a client wishes to see them
    * Add an lsb-compliant init script into god/init [Woody Peterson]
    * Never require stop command; use default killer if none is specified
  * Bug Fixes
    * Fix redefinition error for time.h and allow it to compile on Ubuntu Edgy [github.com/tbuser]
    * Fix a memory leak in jabber by adding a call to jabber_client.close [github.com/woahdae]
    * Make jabber code manage one connection to make it faster, use less memory,
      and not leak [github.com/woahdae]

== 0.7.13 / 2009-05-04
  * Bug Fixes
    * Auto daemonized processes are now stopped/unmonitored correctly [github.com/jcapote]

== 0.7.12 / 2008-12-10
  * Bug Fixes